Last report changes for now.

--- a/master-thesis-report/bibliography.bib
+++ b/master-thesis-report/bibliography.bib
@@ -200,3 +200,9 @@ TITLE="Graph Databases Comparison: AllegroGraph, ArangoDB,
 InfiniteGraph, Neo4J, and OrientDB",
 YEAR="2018",
 }
+
+@ARTICLE{lock09a,
+AUTHOR="Locke, B. and Marting, J.",
+TITLE="Named Entity Recognition:Adapting to Microblogging",
+YEAR="2009",
+}
