--- a/master-thesis-report/master-thesis-report.tex
+++ b/master-thesis-report/master-thesis-report.tex
@@ -1,46 +1,34 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{relsize}
-\usepackage{blindtext}
-\usepackage{tcolorbox}
-\usepackage{graphicx}
-\usepackage{hyperref}
-\usepackage{pdfpages}
+\documentclass[oneside,a4paper]{book}
+%\pagestyle{headings}
 
-\graphicspath{ {./images/} }
+\input{preamble}
 
-\title{Twitter User Localization\\[0.2em]\smaller{Master Thesis Report}}
-\author{Silas Berger}
-
-\makeindex
-
-\begin{document}
-
-\maketitle
-\clearpage
-
-\section*{Abstract}
+\chapter*{\centering Abstract}
+\begin{quotation}
+\noindent 
 Knowing a social media user's location can be useful for many applications in data analysis, in fields such as market research, public health, and politics. Researchers often use Twitter as their platform of choice for this type of analysis, as it provides a vast repository of publicly available data. Unfortunately, many Twitter users choose not to disclose their true location. Many research projects have investigated ways of accurately estimating a Twitter user's location withing a given radius (e.g. 10km). Since this has proven to be a considerable challenge, we have decided to simplify the problem to a binary classification between Swiss and non-Swiss (i.e. foreign). This information can often be just as useful as localizing a Twitter user to a city or precise location, especially in a small country such as Switzerland. Therefore, sacrificing some specificity in this localization may be a worthwhile trade-off, if it allows for more reliable results.
 
 Since we were unable to find an existing Twitter-based data set which fit our needs for this project, we built a custom data set, specifically oriented towards our research. This data set is based around a collection of Twitter users we refer to as "Swiss Influencers" - that is, accounts which are mostly of interest to Swiss people. We then defined a set of features considered likely to be indicators as to whether a certain Twitter user is Swiss or foreign. We implemented these features as part of a full classification pipeline which allows users to specify the screen name of a Twitter user and receive as a result a classification of that Twitter user as either Swiss or foreign. 
 
 We have found that our best classification models achieved an accuracy of 95\%, with a maximum precision of 98\%, and a maximum recall of 91\%. To the best of our knowledge, research projects attempting to localize Twitter users to a precise radius (e.g. 10km) managed to correctly localize at most 60\% of users. This goes to show that our binary classification problem, while potentially not being specific enough for certain types of applications, can amount to significantly more reliable results.
-
+\end{quotation}
 \clearpage
+
+
+% C O N T E N T S 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \tableofcontents
-\clearpage
 
-\section{Introduction}
+\chapter{Introduction}
+\label{cha:introduction}
 Knowing a social media user's location can be useful for a variety of applications in areas such as public health, public safety, or sales. This type of research is often done using Twitter. Twitter users have the option to specify their location on their profile page. However, many users choose not to do so, or supply a made-up location value. We therefore want to explore ways to localize a Twitter user based on their data accessible to us through the Twitter API, even if they do not supply a valid location field.
 
 For this, we have compiled a list of "Swiss Influencers" - that is, a list of Twitter accounts which are likely mostly followed by Swiss users. These influencers include accounts such as local sports teams, local politicians, and other public which are mostly of interest to Swiss people, such as Swiss TV stations and newspapers. If such a Swiss public figure or entity is also well-know outside of the country, it is not considered a Swiss Influencer. For example, this is true for public figures such as Roger Federer. While he is Swiss, he also has fans around the world, which means his Twitter account will likely be followed by many people outside of Switzerland. Since we were unable to find any existing Twitter data sets suitable for our purposes, we then created our own database of Twitter users and their Tweets.
 
 We propose a number of features which can be used as indicators to determine whether a given Twitter user is Swiss or foreign. We have developed a full pipeline for localizing Twitter users through a web front end.
 
-\section{Goals}
+\chapter{Goals}
+\label{cha:goals}
 We want to build a data set of Twitter users, starting with a set of users we have determined to be “Swiss Influencers” (that is, popular users which are likely mostly followed by Swiss people), and the users who follow them. We want to augment the information in this dataset by collecting recent Tweets of as many of these users as possible.
 
 We want to analyze these data, to answer the following research question:
@@ -55,7 +43,8 @@ In order to give users of our system a way of interacting with the data and the 
 
 Finally, we want to implement a simple web-based user interface to provide a graphical way of interacting with the API. The web interface should allow users to study graphical representations of the data at hand, to help them better understand the data and the localization metamodels. Users should also be able to localize a new Twitter user using the web interface.
 
-\section{Related Work}
+\chapter{Related Work}
+\label{cha:related-work}
 Related research shows that only a small number of users indicate a valid and precise location in their profile's location field. Roughly 28 to 34\% of Twitter users do not indicate a location at all, while many of the others provide a nonsensical value such as \textit{Wonderland} or \textit{Worldwide}, or an unspecific location such as \textit{California} \cite{chen10a, hech11a}. This underlines the strong potential of estimating a user's location \cite{chen10a}, with applications in areas such as earthquake detection \cite{robi11a, saka10a} (figure \ref{fig:earthquake-center-estimation}), typhoon trajectory estimation \cite{saka10a} (figure \ref{fig:typhoon-trajectory-estimation}) and the prediction of emerging influenza epidemics \cite{achr11a}.
 
 \begin{figure}
@@ -122,10 +111,11 @@ Finally, we want to accompany each Swiss / non-Swiss classification with a value
 
 In summary, we see that there are two main groups of approaches to localizing a Twitter user. Researchers either use the textual contents of a Twitter user's Tweets or self-description, or the use aspects of their friendship network, such as their follows-relationships and their retweet and reply-tweet behavior. In the former approach, researchers often look for specific words that can be considered indicators of a user's location, such as words with strong spatial locality \cite{ryoo14a}. Approaches relying on textual content generally have a few challenges in common, such as having to deal with noisy data, and having to adapt models to different languages. Additionally, users may not always adhere to proper grammar and orthography when posting on social media, making Natural Language Processing tasks even more difficult. That said, noisy data is also an issue when taking the approach of examining a user's friendship and interaction network. Some accounts may be oriented towards maximizing exposure and thus follow and interact with an exceptionally large number of other users. Another source of noise in this approach is the circumstance that users may choose to (partially) ignore accounts from within their region or country, in favor of following accounts that are relevant with respect to their particular interests. For instance, a user with an interest in computer science may favor accounts by relevant people in that field, such as Elon Musk (Tesla Motors / SpaceX), Sundar Pichai (Google) or Bill Gates (Microsoft), rather than those of their region's local media outlets, politicians, or friends living in the region. This goes to show that both of these groups of approaches may work well for some given Twitter user, but can fail for another. Whether an approach is successful largely depends on what assumptions it needs to make, and whether a given Twitter user in question fulfills them.
 
-\section{Design}
+\chapter{Design}
+\label{design}
 We break our classification system down into three core components: features, classifiers, and metamodels.
 
-\subsection{Features}
+\section{Features}
 In our architecture, we define a feature extractor as an algorithm that analyzes our database or graph, to produce a scalar or vector describing a pivot user in terms of some defined property. We call this resulting scalar or vector a “feature”. We propose the following features:
 \begin{itemize}
 \item \textbf{Influencer Follower Ratio:} The number of Swiss Influencers a given user follows, divided by the total number of accounts followed by this user.
@@ -137,7 +127,7 @@ In our architecture, we define a feature extractor as an algorithm that analyzes
 \item \textbf{Social Media Connection} Try to match a user's Twitter profile to their presence on other social media such as LinkedIn\footnote{\href{https://www.linkedin.com/}{https://www.linkedin.com/}} and XING\footnote{\href{https://www.xing.com/}{https://www.xing.com/}}. On these more professionally oriented platforms, users may be more likely to correctly state their true location. By matching a user's Twitter profile to their accounts on other social media, we might therefore be able to leverage more accurate user-generated data. 
 \end{itemize}
 
-\subsection{Classifiers}
+\section{Classifiers}
 Our localization pipeline defines a classifier is an algorithm that takes in a scalar feature or a feature vector, and produces  a binary Swiss- / non-Swiss decision, together with an estimated confidence. Classifiers are not in charge of handling their own feature extraction. Instead, they are provided with the required / desired features by the meta-model. Generally, classifiers are agnostic to the features they accept. However, there may be exceptions, where certain classifiers expect a specific feature or feature vector. Examples of possible classifiers are as follows:
 \begin{itemize}
 \item Single-Feature Binary Classifier
@@ -147,7 +137,7 @@ Our localization pipeline defines a classifier is an algorithm that takes in a s
 \item Scalable Vector Classifier
 \end{itemize}
 
-\subsection{Metamodels}
+\section{Metamodels}
 A meta-model is what we call an entity that unites features and classifiers. It consists of one or more classifiers and is responsible for providing them with training and validation data. It defines feature extractor and classifier settings, runs feature extractors, trains classifiers, and combines classifier outputs into a single decision if needed. The meta-model adds each of its classification decisions to the graph as a node-edge-pair, where the edge contains attributes such as the classifier, classifier instance, meta-model, meta-model instance, confidence, etc., while the node mainly contains the class decision. If such an edge represents a meta-model instance's final decision for a given pivot user, the edge is marked as "type: final". Metamodels can also use a combination of multiple classifiers. In this case, each edge representing an individual classifier's decision is marked as "type: partial". The edge representing the final meta-decision is then again marked as "type: final".
 
 Each meta-model first needs to be trained, and can then be used to classify new samples. The training phase is handled by the \textit{build()} function, which each meta-model class provides. It is mainly responsible for training the meta-model's classifiers and validating their accuracy.
@@ -156,10 +146,11 @@ Multiple metamodels can be active on the graph at the same time, since all modif
 
 Metamodels can be as generic or as ad-hoc. For instance, we might have separate metamodels for each relevant scikit-learn classifier, but we might also have a single “Scikit-learn Meta-Model”, which takes a classifier as an option, or even learns the ideal classifier, based on the validation data.
 
-\section{Implementation}
+\chapter{Implementation}
+\label{cha:implementation}
 We have discussed our goals and problem statement, as well as the state of the art and our theoretical approach. In this chapter, we will give an overview of the technologies we used, why we chose them, and what the architecture of our localization pipeline looks like. We will also discuss the different data sets we have collected and explain the feature extractors, classifiers and metamodels we have implemented.
 
-\subsection{Architecture and Technologies}
+\section{Architecture and Technologies}
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[scale=0.45]{architecture_overview}
@@ -169,7 +160,7 @@ We have discussed our goals and problem statement, as well as the state of the a
 
 Figure \ref{fig:architecture-overview} shows an overview of our software architecture. At the core of our system we have a back end, which is responsible for data collection, localization metamodels, and meta-model testing. The back end uses MongoDB for storing collected data such as Twitter users and Tweets, and Neo4j to build a knowledge graph. It also provides a RESTful API, which is consumed by our web UI.
 
-\subsubsection{MongoDB Database}
+\subsection{MongoDB Database}
 We use MongoDB\footnote{\href{https://www.mongodb.com/}{https://www.mongodb.com/}} as our core database system for all data considered mostly static, such as user meta data, user Tweets, and information about geographic locations. We chose MongoDB due to its efficiency, robustness and flexibility in an environment with large amounts of strongly heterogeneous data, as well as its easy-to-use integration with Python. 
 
 Our MongoDB instance is running inside a Docker\footnote{\href{https://www.docker.com/}{https://www.docker.com/}} container, defined by a Docker Compose\footnote{\href{https://docs.docker.com/compose/}{https://docs.docker.com/compose/}} file. This allows for low-cost and low-latency development on any machine, without the need for configuring a database server.
@@ -186,7 +177,7 @@ In our MongoDB database, we maintain the following collections:
 \item \textbf{Feature Cache.} A collection of documents corresponding to entities in either the Twitter Users or Twitter Users Test Set collection. If a feature extractor extracts a feature value for a given user, that value can be cached in the corresponding document in this collection. This is done as a means to avoid expensive recalculations of feature values.
 \end{itemize}
 
-\subsubsection{Knowledge Graph}
+\subsection{Knowledge Graph}
 We decided to separate our static from our dynamic data, whereby data refers to Twitter user metadata and Tweets gathered from Twitter API, and dynamic data refers to data generated from our metamodels. Since our metamodels generate associations of users and countries, we decided to use a graph database for this part of our implementation. Furthermore, as we are modeling aspects of a social network, we believe that this form of storing our results can offer more flexibility for future expansions than a document store such as MongoDB or an RDBMS. We refer to this graph database as our \textit{knowledge graph}.
 
 As an environment for our knowledge graph, we use the Neo4j\footnote{\href{https://neo4j.com/}{https://neo4j.com/}} graph database. It allows us to easily store and query the relationships among Twitter users, as well as between Twitter users and geographic locations. 
@@ -206,16 +197,16 @@ When a meta-model localizes a user, it can create an edge in the graph, between 
 	\label{fig:knowledge-graph-schema}
 \end{figure}
 
-\subsubsection{Tweepy}
+\subsection{Tweepy}
 We use Tweepy\footnote{\href{https://www.tweepy.org/}{https://www.tweepy.org/}} as a wrapper for interacting with the Twitter REST API. Tweepy offers a seamless integration of API requests and responses into Python code. Additionally, it can automatically await rate limitations and resume its requests afterwards. 
 
-\subsubsection{scikit-learn}
+\subsection{scikit-learn}
 Scikit-learn\footnote{\href{https://scikit-learn.org/stable/}{https://scikit-learn.org/stable/}} is a framework for machine learning in Python. Among other features, it provides implementations for most of the commonly used classifiers, such as k-Nearest Neighbours, Support Vector Machines, Naive Bayes, and Decision Trees, short of Artificial Neural Networks. The provided classifiers are efficient and all use the same interface for training and classification, which makes it easy to switch between different classifiers. This allows us to quickly try out multiple different classifiers in each of our metamodels, in order to find one that works best with the given feature set.
 
-\subsubsection{SpaCy}
+\subsection{SpaCy}
 For the purpose of Named Entity Recognition (NER), we use SpaCy\footnote{\href{https://spacy.io/}{https://spacy.io/}}, a state-of-the-art framework for Natural Language Processing. NER describes the task of identifying occurrences of a specific object in a sentence, and tagging these objects within a given set of categories. Such categories can include "person", "location", "organization", and so on \cite{lock09a}. We originally intended to use simple PoS tagging using NLTK\footnote{\href{https://www.nltk.org/}{https://www.nltk.org/}}. PoS tagging, as opposed to NER, is the process of marking up each word in a sentence with its specific grammatical part of speech, such as nouns, verbs, adjectives, interjections, and, most importantly for our application, proper nouns. However, NER has proven to be a more useful approach to the problems at hand. Additionally, NLTK does not ship with out-of-the-box PoS tagging support for German, French and Italian. These languages are natively supported by SpaCy, which is another core reason why we decided to use this framework instead.
 
-\subsection{Data Collection}
+\section{Data Collection}
 In order to start building feature extractors and metamodels, we first needed to collect data. As a starting point, we used the already compiled lists of Swiss influencers \footnote{\href{https://github.com/acknowledge/swiss-twitter-accounts}{https://github.com/acknowledge/swiss-twitter-accounts}}. We started by querying the Twitter API for the meta data object for each of the user handles on these lists, and persisting them to the influencers collection in MongoDB. Next, we queried the API for the follower IDs for each of these influencers. This process was rather time-consuming. The Twitter API can be queried for follower IDs a maximum of 15 times per 15-minute window. Additionally, it returns at most 5000 IDs per query. Since our influencers tend to be rather popular accounts, they often have several hundred thousand followers, which means that it can take multiple hours just to retrieve the follower IDs for a single influencer.
 
 After collecting the influencer IDs for all influencers, we proceeded by fetching the meta data objects for all Twitter users corresponding to these IDs. With more than a million distinct IDs and a rate limit of 900 queries per 15-minute window, this again took a long time.
@@ -224,8 +215,8 @@ Up to this point, all of our collected Twitter users were either influencers or 
 
 Finally, we needed to collect Tweets. In order to get a large enough sample, we decided to collect each user's most recent 100 Tweets. We initially intended to collect Tweets for every user in our database - that is, for every influencer, every follower, and every user in the TVT set. However, due to the strict rate limitations and the large number of users in our database, we decided to restrict our collection to just the users in the TVT set.
 
-\subsection{Localization Pipeline}
-\subsubsection{Feature Extractors}
+\section{Localization Pipeline}
+\subsection{Feature Extractors}
 In our implementation, we extract six different features. This section discusses the exact definition and implementation of each of the implemented features.
 
 \textbf{Swiss Influencers Followed Ratio.} We maintain a list of Swiss Twitter users which we think are likely to be mostly followed by Swiss people. We refer to these users as "Swiss influencers". The list includes accounts of Swiss politicians, political parties, sports teams, and media outlets with low international notoriety. For example, good candidates for Swiss influencers are local newspapers or football clubs. On the other hand, people such as Roger Federer are less suitable for this cause, since they are internationally known, and hence likely to be followed by many users outside of Switzerland. The hypothesis behind this feature is that there may be a correlation between a user being Swiss, and the number of Swiss influencers they follow.
@@ -264,7 +255,7 @@ where $swiss\_mentions\_ratio$ is a normalized number defined as the number of u
 
 Feature extraction generally involves a large number of database requests and other time-consuming operations. However, once a given feature is extracted for a given user, its value will not change unless the underlying database changes. We therefore developed a feature caching system, where each feature extractor automatically stores its extracted values. Whenever a feature extractor is called on a user for which this feature has already been cached, the cached value is returned, without any recalculations. Optionally, this feature can be deactivated for any feature extractor, or on a meta-model level, for all the extractors used by this meta-model.
 
-\subsubsection{Classifiers}
+\subsection{Classifiers}
 We use scikit-learn as a framework for most of our classification. It provides a implementations most of the state-of-the-art classifiers used in machine learning, all with a unified interface. In addition to the classifiers provided by scikit-learn, we implemented a model which classifies a sample based on a single numeric features. The following two classifiers are used in our metamodels:
 
 \textbf{Single Feature Binary Threshold.} A custom model which distinguishes between two classes based on a single numeric feature. The training set is used to calculate the average feature value for the class 0 and class 1 samples respectively. A new s For all features which only produce a single scalar value, we used our own "Single Feature Binary Threshold" classifier. Not only did this classifier perform well, its ample is classified by calculating its feature value's distance to the class 0 and class 1 average and picking the class to which it is closer.
@@ -278,7 +269,7 @@ min(max(\frac{\Delta_{positive}}{\Delta_{avgs}}, \frac{\Delta_{negative}}{\Delta
 
 \textbf{Scikit Learn.} We developed a wrapper around the classifiers provided by scikit-learn, in order to easily fit them into our localization pipeline. Users can instantiate this class and supply it with an instance of a classifier provided by scikit-learn. In our implementation, we mostly use the k-Nearest Neighbours classifier with a fixed, experimentally decided $k$. Other classifiers, such as SVMs, Naive Bayes, or a Decision Tree can easily be used through this wrapper, but we have observed the best results using k-Nearest Neighbors. As a confidence measure, we use the scikit-learn classifier's \textit{predict\_proba}\footnote{\href{https://github.com/scikit-learn/scikit-learn/blob/b194674c4/sklearn/neighbors/\_classification.py\#L199}{https://github.com/scikit-learn/scikit-learn/blob/b194674c4/sklearn/neighbors/\_classification.py\#L199}} function, which returns the probability with which a sample is in each class.
 
-\subsubsection{Metamodels}
+\subsection{Metamodels}
 Metamodels are responsible for combining feature extractors and classifiers. They can provide a single classifier with one or more features, or they can use multiple classifiers and combine their results into a final decision. In order to test the individual performance of each of our features, we have implemented one meta-model per feature which only uses that one feature. These metamodels start with the prefix "Simple". They are \textit{SimpleInfluencerFollowedRatio}, \textit{SimpleHashtagSimilarity}, \textit{SimpleTweetInteractionBehavior}, \textit{SimpleSwissTweetInteraction}, and \textit{SimpleSwissNamedPlacesCount}. 
 
 For the classification step in our pipeline, we used whichever classifier yielded the best performance on the test set, based on the selection we presented above.
@@ -299,7 +290,7 @@ As we will show in the evaluation, the features \textit{Swiss Tweet Interaction}
 
 Further feature combinations can easily be implemented by following the pattern used in the combinations we have implemented, but using additional or different feature extractors.
 
-\subsection{Back End API}
+\section{Back End API}
 In order provide an interface for interacting with our localization pipeline, we decided to implement a RESTful API. Since the back end is implemented in Python, we chose Flask\footnote{\href{https://flask.palletsprojects.com/en/1.1.x/}{https://flask.palletsprojects.com/en/1.1.x/}} as a web framework, which allowed us to easily implement the GET and POST endpoints we needed.
 
 The API server maintains an instance of each available metamodel. These metamodels are not being built (that is, trained) at startup, to increase startup speed. Instead, users can choose to build the metamodels they need through a corresponsing API endpoint. Calling this endpoint spawns a new thread which will take care of building that metamodel, without blocking the API server for future requests. This operation is implemented in a thread-safe way to avoid multiple calls trying to build the same metamodel at the same time. Metamodels are considered "online" once they are built, and "offline" before. Users can request a list of all available metamodels and their state (online / offline) using the corresponsing endpoint.
@@ -308,10 +299,10 @@ The API server also provides a dedicated endpoint for localizing a Twitter user.
 
 The final endpoint provided by the API server is responsible for providing a set of statistics about the MongoDB database, such as the amount of users and Tweets, number of influencers, and number of Swiss vs. non-Swiss users currently in the database. These numbers are calculated at run time, to allow users to always query for the latest data. 
 
-\subsection{Front End}
+\section{Front End}
 As a way for users to interact with the Twitter localization system, we developed a dashboard-style web interface. For this front end, we used the Vue Paper Dashboard\footnote{\href{https://github.com/creativetimofficial/vue-paper-dashboard}{https://github.com/creativetimofficial/vue-paper-dashboard}}. The Vue Paper Dashboard is a dashboard-style front end template, based on the Vue.js\footnote{\href{https://vuejs.org/}{https://vuejs.org/}} framework. We chose this approach because it offers an easy-to-use platform for our needs and its design provides an intuitive user experience for the end user.
 
-\subsubsection{Overview and Showcase}
+\subsection{Overview and Showcase}
 The front end works with the back end API mentioned in the previous section and allows users to localize Twitter users with using any of the available metamodels. It is a reflection of the global back end state. That is, if multiple users access the front end at the same time, they will all see the same content. When the back end is first started, all of its metamodels are offline (that is, they haven't yet been initialized), and there are no completed, pending or failed localizations in its queue yet. If users access the "Localize" page in that state, it looks as shown in figure \ref{fig:localize-initial}. In this state, users can't perform any localization queries yet, as all the metamodels are offline. This is reflected on the "Metamodels" page, as shown in figure \ref{fig:metamodels-initial}. Users can then build a metamodel by pressing the corresponding button. This will send a request to the back end, where that metamodel will be trained and is then available for use. Figure \ref{fig:metamodels-built} shows the same "Metamodels" page, but with a selection of them online. Users can now return to the "Localize" page, where all the metamodels which are online are available in the dropdown menu on the top. 
 
 To localize a Twitter user, visit the "Localize" page, enter the Twitter screen name they are interested in, select the metamodel they want to use, and click "Localize". This will add the request as "pending" to the list of localization results and send a localization request to the back end. This is shown in figure \ref{fig:localize-one-pending}. Figure \ref{fig:localize-many-results} shows the same page, with a number of completed requets. One of these requests failed because the requested Twitter screen name didn't exist. This result is marked red, to avoid confusion.
@@ -360,13 +351,14 @@ Finally, the dashboard offers a "Statistics" page, as shown in figure \ref{fig:s
 	\label{fig:statistics}
 \end{figure}
 
-\subsubsection{Implementation Details}
+\subsection{Implementation Details}
 Each of the three pages ("Localize", "Metamodels", and "Statistics") is implemented as a Vue.js component\footnote{\href{https://vuejs.org/v2/guide/components.html}{https://vuejs.org/v2/guide/components.html}}. They all rely on a singleton object of a JavaScript class called \textbf{Context}. This object periodically queries the back end for its current metamodels status (that is, which metamodels are online, which ones are offline), as well as the current queue of pending, completed and failed localizations. The Context object caches this information, provides access to it to all the components, and raises corresponding events, whenever data has been updated. This allows the components to react to these updates and display the latest data available in the front end.
 
 When localizing a new user, the "Localize" component uses the Context object to send a localization request to the back end. The component does not receive an immediate response to that request, as it is executed asynchronously. Once a request has been completed, the back end will move that request from its "pending" queue to either the "completed" or the "failed" queue. As soon as the Context object queries the back end for the latest localization queue the next time, all components will be updated and receive the latest results.
 
 
-\section{Evaluation}
+\chapter{Evaluation}
+\label{cha:evaluation}
 In order to evaluate the performance of our metamodels and their confidence estimates, we designed an assessment pipeline which benchmarks each meta-model on various different scores. In order to produce comparable results, we use the same train-validate-test split of the TVT set on every run. The is designed to only contain users whose location field matches a geographic location according to the GeoNames API. We therefore consider this geographic location to be our ground truth.
 
 When the evaluator is instantiated, it is provided with an instance of a meta-model. The evaluator then builds the meta-model using the training set. Afterwards, it lets the meta-model localize each user in the test set, whereby each localization is persisted to the graph. Once all test users are localized, the evaluator collects all localization decisions made by this model instance and compares them to the ground truth, in order to establish the confusion matrix. The confusion matrix represents the numbers of true positives ($TP$), false negatives ($FN$), false positives ($FP$) and true negatives ($TN$) among all results.
@@ -399,7 +391,7 @@ CPI_{samples} := \frac{\sum cpi(confidence, classif.)}{\#samples}
 
 We defined this metric in a way that is closely related to the F-measure, and allows us to assess the overall performance of our confidence estimation mechanism along a single axis. This metric works based on the fact that each confidence level must lie in the $[0.5, 1]$ interval, due to the fact that all classifiers perform a binary classification. The CPI equally rewards high confidence in correct classifications and low confidence in incorrect classifications. It also equally punishes high confidence in incorrect classifications and low confidence in correct classifications. Due to these properties, the CPI solely measures the performance of a model's confidence estimate, rather than its classification performance.
 
-\subsection{Swiss / non-Swiss Classification}
+\section{Swiss / non-Swiss Classification}
 We ran each of the "Simple" metamodels against our test set containing of 100 users, balanced between Swiss and non-Swiss. The following table shows how our metamodels performed:
 
 \begin{center}
@@ -479,7 +471,7 @@ Simple Hashtag Similarity & 0.50 & 0.25 & 0.04 & 0.07 \\
 
 \textit{Feature Combination 3} is a combination of the second- and third-best performing features, but shows the best overall performance. Interestingly, this metamodel performs better than combinations 1, 2 and 4, which all contain our top-performing feature, in terms of their F-measure. While we sacrifice some precision with this model, we also significantly improve on recall.
 
-\subsection{Confidence Estimation}
+\section{Confidence Estimation}
 We have evaluated our approach to confidence estimation on the same test set, as outlined above. The results look as follows:
 
 \begin{center}
@@ -503,10 +495,11 @@ Simple Hashtag Similarity & 1.00 & 1.00 & 0.50 \\
 
 Our results show that using class membership probability as a confidence metric works rather well for our use case. While the confidence in incorrectly classified samples is fairly high, there is a significant gap between the average confidence in correctly vs. incorrectly classified ones. This is important, as it allows us to set a threshold of confidence, below which we can choose to reject a classification. This also shows in the CPI value, which rewards high confidence in correct classifications and low confidence in incorrect classifications. We also observe a relationship between the performance of a metamodel and the performance of its confidence estimation: Our three well-performing metamodels show good performance in their CPI, while the CPI is considerably lower for the worse-performing metamodels.
 
-\section{Conclusion and Future Work}
+\chapter{Conclusion and Future Work}
+\label{cha:conclusion-and-future-work}
 We have discussed our problem statement and research question, the current state of the art, our theoretical and practical approach to solving this problem and achieving our goals, and we have evaluated our the results of our experiments. In this section, we will summarize our findings, draw our conclusions, and discuss how this project can be developed further, to improve in the results, and to tackle related problems.
 
-\subsection{Conclusion}
+\section{Conclusion}
 We have implemented a full pipeline and data set for classifying Twitter users as either Swiss or non-Swiss, including five custom features and ten metamodels. To offer users a way of interacting with our system, we implemented a REST API and a dashboard-style web front end, which allows users to easily localize a Twitter user.
 
 Creating a custom data set of Swiss Twitter users has proven to be challenging, time-consuming task. The rate limitations imposed by the Twitter API make it difficult to quickly fetch user meta-data and Tweets for a large number of users. Additionally, it was difficult to define a set of keywords that yielded a substantial number of Tweets by Swiss users. Another limitation of our data set, similar to the ones used by related projects, is the fact that we need to rely on a set of users providing their true location on their Twitter profile, as we have to trust this user-generated data as our ground truth.
@@ -517,7 +510,7 @@ Each classification in our system also produces a confidence value alongside. Th
 
 In our implementation, we decided to persist the results of our localizations to a graph database. However, this has not proven to provide any significant benefits to our development. Instead, we believe it might have been easier to persist all data to a single database, namely, MongoDB.
 
-\subsection{Future Work}
+\section{Future Work}
 There are are some features which we haven't implemented as part of this project, due to time constraints. One such feature is the Social Media Connection, outlined in section 4.1, which is based on the idea of attempting to link a user's Twitter profile to their presence on other social media platforms, which could then serve as a source for additional information.
 
 Further, we think it would be worthwhile to try and approach the classification part using Artificial Neural Networks. Since they are known to require extensive amounts of training data, as well as powerful computation hardware, we decided that such an approach was out of scope for this project.
@@ -528,7 +521,7 @@ To use our system productively, we also see some potential in improving the API 
 
 \clearpage
 \bibliography{bibliography}
-\bibliographystyle{ieeetr}
+\bibliographystyle{plain}
 
 \clearpage
 \appendix
